Ui issue of unvailable item fixed

--- a/app/styles/_cart_sidebar.scss
+++ b/app/styles/_cart_sidebar.scss
@@ -102,6 +102,12 @@
   &.disabled {
     cursor: default;
     pointer-events: none;
+    img {
+      opacity: 0.5;
+    }
+    .package-name {
+      text-decoration: line-through;
+    }
   }
 }
 
