--- a/app/templates/order/_embed_cart_detail.hbs
+++ b/app/templates/order/_embed_cart_detail.hbs
@@ -40,7 +40,9 @@
             </div>
             <div class="small-4 columns">
               <div class="cart-widget">
-                {{quantity-widget package=row type="update" updateAction=(action 'UpdateRequestedValue')}}
+                {{#unless (is-not row.isAvailable)}}
+                  {{quantity-widget package=row type="update" updateAction=(action 'UpdateRequestedValue')}}
+                {{/unless}}
               </div>
             </div>
           </div>
@@ -65,7 +67,9 @@
         </div>
         <div class="small-4 columns">
           <div class="cart-widget">
-            {{quantity-widget package=row.record type="update" updateAction=(action 'UpdateRequestedValue')}}
+            {{#unless (is-not row.isAvailable)}}
+              {{quantity-widget package=row.record type="update" updateAction=(action 'UpdateRequestedValue')}}
+            {{/unless}}
           </div>
         </div>
       </div>
