--- a/app/templates/account_details.hbs
+++ b/app/templates/account_details.hbs
@@ -1,5 +1,5 @@
 {{#if isMobileApp}}
-{{scroll-to-bottom customClass="account-detail-info-scroll-arrow"}}
+  {{scroll-to-bottom customClass="account-detail-info-scroll-arrow"}}
 {{/if}}
 <div class="row account_details">
   <div class="large-8 columns large-offset-2 medium-offset-1 medium-10 small-12">
@@ -15,9 +15,8 @@
                 <h1 class="title">{{t "account.account_details"}}</h1>
               </section>
             </nav>
-
             {{#unless cart.isEmpty}}
-            {{small-cart-toggle-view}}
+              {{small-cart-toggle-view}}
             {{/unless}}
             <div class="row">
               <div class="small-12 large-10 large-offset-1 medium-10 medium-offset-1 columns">
@@ -30,35 +29,32 @@
                       <label class="form-label title-label">{{t "account.contact_details"}}</label>
                     </div>
                   </div>
-
                   <br>
-
                   {{#validatable-form onSubmit=(action 'saveAccount') as |form|}}
-                  <div class="row">
-                    {{#form-control}}
-                    {{#if model.organisation}}
-                    <div class="small-12 columns" id="organisation_id" {{action "goToSearchOrg"}}>
-                      <label class="form-label title-label">{{t "account.organisation"}}</label>
-                      {{input type="text" id = "organisation_details" classNames="number_input center_align_placeholder" required='true' value=model.organisation.nameEn disabled=true}}
+                    <div class="row">
+                      {{#form-control}}
+                        {{#if model.organisation}}
+                          <div class="small-12 columns" id="organisation_id" {{action "goToSearchOrg"}}>
+                            <label class="form-label title-label">{{t "account.organisation"}}</label>
+                            {{input type="text" id = "organisation_details" classNames="number_input center_align_placeholder" required='true' value=model.organisation.nameEn disabled=true}}
+                          </div>
+                        {{else}}
+                          <div class="small-12 columns" {{action "goToSearchOrg"}}>
+                            <label class="form-label title-label">{{t "account.organisation"}}</label>
+                            {{input type="text" id = "organisation_details" classNames="number_input center_align_placeholder" required='true' }}
+                          </div>
+                        {{/if}}
+                        <div class="small-12 columns input-error warning_empty">
+                          {{fa-icon 'exclamation-triangle'}}&nbsp;&nbsp;{{t "account.organisation_warning"}}
+                        </div>
+                      {{/form-control}}
                     </div>
-                    {{else}}
-                    <div class="small-12 columns" {{action "goToSearchOrg"}}>
-                      <label class="form-label title-label">{{t "account.organisation"}}</label>
-                      {{input type="text" id = "organisation_details" classNames="number_input center_align_placeholder" required='true' }}
-                    </div>
-                    {{/if}}
-
-                    <div class="small-12 columns input-error warning_empty">
-                      {{fa-icon 'exclamation-triangle'}}&nbsp;&nbsp;{{t "account.organisation_warning"}}
-                    </div>
-                    {{/form-control}}
-                  </div>
-                  <br>
-                  <div class="row">
-                    {{#form-control}}
-                    <div class="small-2 columns user_title">
-                      <label class="form-label title-label">{{t "account.title"}}</label>
-                      {{select-list
+                    <br>
+                    <div class="row">
+                      {{#form-control}}
+                        <div class="small-2 columns user_title">
+                          <label class="form-label title-label">{{t "account.title"}}</label>
+                          {{select-list
                             content=titles
                             on-change=(action (mut selectedTitle))
                             selectedValue=selectedTitle
@@ -66,130 +62,130 @@
                             selectArrow=true
                             classNames='condition'
                             idNames='title' }}
-                    </div>
-                    <div class="small-5 columns">
-                      <label class="form-label title-label">{{t "account.first"}}</label>
-                      {{input type="text" value=model.user.firstName id="firstName" classNames="number_input center_align_placeholder" required='true'}}
-                    </div>
-                    <div class="small-5 columns">
-                      <label class="form-label title-label">{{t "account.last"}}</label>
-                      {{input type="text" value=model.user.lastName id="lastName" classNames="number_input center_align_placeholder" required='true'}}
-                    </div>
-                    <div class="small-12 columns input-error warning_empty">
-                      {{fa-icon "exclamation-triangle"}}&nbsp;&nbsp;{{t "account.user_info"}}
-                    </div>
-                    {{/form-control}}
-                  </div>
-                  <br>
-                  <div class="row">
-                    {{#form-control}}
-                    <div class="small-12 columns">
-                      <label class="form-label title-label">{{t "account.position"}}</label>
-                      {{#if model.organisationsUser}}
-                      {{input type="text" value=model.organisationsUser.position id="position" classNames="number_input center_align_placeholder" required='true' autoFocus=true}}
-                      {{else}}
-                      {{input type="text" value=position classNames="number_input center_align_placeholder" required='true' autoFocus=true}}
-                      {{/if}}
-                    </div>
-                    <div class="small-12 columns input-error warning_empty">
-                      {{fa-icon "exclamation-triangle"}}&nbsp;&nbsp;{{t "account.position_warning"}}
-                    </div>
-                    {{/form-control}}
-                  </div>
-                  <br>
-                  <div class="row">
-                    {{#form-control}}
-                    <div class="small-12 columns">
-                      <label class="form-label title-label">{{t "account.email"}}</label>
-                      <label class="form-label">{{t "account.work"}}</label>
-                      {{#if model.user.email}}
-                      <div class="row">
-                        <div class="small-5 columns email-disabled">
-                          {{model.user.email}}
                         </div>
-                        {{#if model.user.isEmailVerified}}
-                        <div class="small-3 columns verified_icon">
-                          <span>
-                            {{fa-icon "check-circle" prefix="far"}}
-                            <span class="verified_text">{{t 'my_dashboard.account.verified_text'}}</span>
-                          </span>
+                        <div class="small-5 columns">
+                          <label class="form-label title-label">{{t "account.first"}}</label>
+                          {{input type="text" value=model.user.firstName id="firstName" classNames="number_input center_align_placeholder" required='true'}}
                         </div>
-                        {{/if}}
-                      </div>
-                      {{else}}
-                      {{input value=email classNames="number_input center_align_placeholder" id="email" type="email" required='true'}}
-                      {{/if}}
+                        <div class="small-5 columns">
+                          <label class="form-label title-label">{{t "account.last"}}</label>
+                          {{input type="text" value=model.user.lastName id="lastName" classNames="number_input center_align_placeholder" required='true'}}
+                        </div>
+                        <div class="small-12 columns input-error warning_empty">
+                          {{fa-icon "exclamation-triangle"}}&nbsp;&nbsp;{{t "account.user_info"}}
+                        </div>
+                      {{/form-control}}
                     </div>
-                    <div class="small-12 columns input-error warning_empty">
-                      {{fa-icon "exclamation-triangle"}}&nbsp;&nbsp;{{t "account.email_warning"}}
+                    <br>
+                    <div class="row">
+                      {{#form-control}}
+                        <div class="small-12 columns">
+                          <label class="form-label title-label">{{t "account.position"}}</label>
+                          {{#if model.organisationsUser}}
+                            {{input type="text" value=model.organisationsUser.position id="position" classNames="number_input center_align_placeholder" required='true' autoFocus=true}}
+                          {{else}}
+                            {{input type="text" value=position classNames="number_input center_align_placeholder" required='true' autoFocus=true}}
+                          {{/if}}
+                        </div>
+                        <div class="small-12 columns input-error warning_empty">
+                          {{fa-icon "exclamation-triangle"}}&nbsp;&nbsp;{{t "account.position_warning"}}
+                        </div>
+                      {{/form-control}}
                     </div>
-                    {{/form-control}}
-                  </div>
-                  <br>
-                  <div class="row">
-                    {{#form-control}}
-                    <div class="large-12 medium-12 small-12 columns">
-                      <label class="form-label title-label">{{t 'account.mobile'}}</label>
-                      <label class="form-label">{{t 'account.mobile_label'}}</label>
+                    <br>
+                    <div class="row">
+                      {{#form-control}}
+                        <div class="small-12 columns">
+                          <label class="form-label title-label">{{t "account.email"}}</label>
+                          <label class="form-label">{{t "account.work"}}</label>
+                          {{#if model.user.email}}
+                            <div class="row">
+                              <div class="small-5 columns email-disabled">
+                                {{model.user.email}}
+                              </div>
+                              {{#if model.user.isEmailVerified}}
+                                <div class="small-3 columns verified_icon">
+                                  <span>
+                                    {{fa-icon "check-circle" prefix="far"}}
+                                    <span class="verified_text">{{t 'my_dashboard.account.verified_text'}}</span>
+                                  </span>
+                                </div>
+                              {{/if}}
+                            </div>
+                          {{else}}
+                            {{input value=email classNames="number_input center_align_placeholder" id="email" type="email" required='true'}}
+                          {{/if}}
+                        </div>
+                        <div class="small-12 columns input-error warning_empty">
+                          {{fa-icon "exclamation-triangle"}}&nbsp;&nbsp;{{t "account.email_warning"}}
+                        </div>
+                      {{/form-control}}
+                    </div>
+                    <br>
+                    <div class="row">
+                      {{#form-control}}
+                        <div class="large-12 medium-12 small-12 columns">
+                          <label class="form-label title-label">{{t 'account.mobile'}}</label>
+                          <label class="form-label">{{t 'account.mobile_label'}}</label>
+                        </div>
+                        <div class="row">
+                          {{#if model.user.mobile}}
+                            <div class="small-5 columns mobile-disabled">
+                              {{model.user.mobile}}
+                            </div>
+                            {{#if model.user.isMobileVerified}}
+                              <div class="small-3 columns verified_icon">
+                                <span>
+                                  {{fa-icon "check-circle" prefix="far"}}
+                                  <span class="verified_text">{{t 'my_dashboard.account.verified_text'}}</span>
+                                </span>
+                              </div>
+                            {{/if}}
+                          {{else}}
+                            <div class="small-2 large-1 columns">
+                              <span class="prefix">+852</span>
+                            </div>
+                            <div class="small-10 large-11 columns">
+                              {{#if model.user.mobile}}
+                                {{numeric-input value=model.user.mobileWithoutCountryCode maxlength="8" pattern="^.{8}$" autoFocus=true}}
+                              {{else}}
+                                {{numeric-input value=mobilePhone maxlength="8" pattern="^.{8}$" autoFocus=true}}
+                              {{/if}}
+                            </div>
+                          {{/if}}
+                        </div>
+                        <div class='row'>
+                          <div class="small-12 columns input-error warning_empty">
+                            {{fa-icon "exclamation-triangle"}}&nbsp;&nbsp; {{t 'account.mobile_warning'}}
+                          </div>
+                        </div>
+                      {{/form-control}}
                     </div>
                     <div class="row">
-                      {{#if model.user.mobile}}
-                      <div class="small-5 columns mobile-disabled">
-                        {{model.user.mobile}}
-                      </div>
-                      {{#if model.user.isMobileVerified}}
-                      <div class="small-3 columns verified_icon">
-                        <span>
-                          {{fa-icon "check-circle" prefix="far"}}
-                          <span class="verified_text">{{t 'my_dashboard.account.verified_text'}}</span>
-                        </span>
-                      </div>
-                      {{/if}}
-                      {{else}}
-                      <div class="small-2 large-1 columns">
-                        <span class="prefix">+852</span>
-                      </div>
-                      <div class="small-10 large-11 columns">
-                        {{#if model.user.mobile}}
-                        {{numeric-input value=model.user.mobileWithoutCountryCode name="mobilePhone" id="mobile" maxlength="8" pattern="^.{8}$" autoFocus=true}}
-                        {{else}}
-                        {{numeric-input value=mobilePhone name="mobilePhone" id="mobile" maxlength="8" pattern="^.{8}$" autoFocus=true}}
-                        {{/if}}
-                      </div>
-                      {{/if}}
+                      {{#form-control}}
+                        <div class="small-12 columns">
+                          <label class="form-label title-label">{{t 'account.preffered_contact_number'}}</label>
+                        </div>
+                        <div class="small-12 large-12 columns">
+                          <label class="form-label">{{t 'account.preffered_contact_label'}}</label>
+                          {{#if (is-and model.organisationsUser model.organisationsUser.preferredContactNumber)}}
+                            {{numeric-input value=model.organisationsUser.preferredContactNumber name="preferredContactNumber" id="preferred_contact" maxlength="8" pattern=".{8,}" autoFocus=true required='true'}}
+                          {{else}}
+                            {{numeric-input value="" name="preferredContactNumber" id="preferred_contact" maxlength="8" pattern=".{8,}" autoFocus=true required='true'}}
+                          {{/if}}
+                        </div>
+                        <div class="large-12 medium-12 small-12 columns input-error warning_empty">
+                          {{fa-icon "exclamation-triangle"}}&nbsp;&nbsp; {{t 'account.preffered_contact_warning'}}
+                        </div>
+                      {{/form-control}}
                     </div>
-                    <div class='row'>
-                      <div class="small-12 columns input-error warning_empty">
-                        {{fa-icon "exclamation-triangle"}}&nbsp;&nbsp; {{t 'account.mobile_warning'}}
+                    <div class="row">
+                      {{!-- <div class="save_button"><i class="fa fa-angle-double-down fa-2x"></i></div> --}}
+                      <div class="small-12 medium-12 columns">
+                        <button {{action 'submit' target=form}}
+                          class="button expand expand_button">{{t "continue"}}</button>
                       </div>
                     </div>
-                    {{/form-control}}
-                  </div>
-                  <div class="row">
-                    {{#form-control}}
-                    <div class="small-12 columns">
-                      <label class="form-label title-label">{{t 'account.preffered_contact_number'}}</label>
-                    </div>
-                    <div class="small-12 large-12 columns">
-                      <label class="form-label">{{t 'account.preffered_contact_label'}}</label>
-                      {{#if (is-and model.organisationsUser model.organisationsUser.preferredContactNumber)}}
-                      {{numeric-input value=model.organisationsUser.preferredContactNumber name="preferredContactNumber" id="preferred_contact" maxlength="8" pattern=".{8,}" autoFocus=true required='true'}}
-                      {{else}}
-                      {{numeric-input value="" name="preferredContactNumber" id="preferred_contact" maxlength="8" pattern=".{8,}" autoFocus=true required='true'}}
-                      {{/if}}
-                    </div>
-                    <div class="large-12 medium-12 small-12 columns input-error warning_empty">
-                      {{fa-icon "exclamation-triangle"}}&nbsp;&nbsp; {{t 'account.preffered_contact_warning'}}
-                    </div>
-                    {{/form-control}}
-                  </div>
-                  <div class="row">
-                    {{!-- <div class="save_button"><i class="fa fa-angle-double-down fa-2x"></i></div> --}}
-                    <div class="small-12 medium-12 columns">
-                      <button {{action 'submit' target=form}}
-                        class="button expand expand_button">{{t "continue"}}</button>
-                    </div>
-                  </div>
                   {{/validatable-form}}
                 </div>
               </div>
