--- a/app/templates/request_purpose.hbs
+++ b/app/templates/request_purpose.hbs
@@ -49,7 +49,7 @@
                   {{t 'order.request_purpose.people_count_info'}}
                 </div>
                 <div class="people-count-input">
-                  {{numeric-input value=peopleCount name="people-count" maxlength= "10" id="people-count" acceptZeroValue="true"}}
+                  {{numeric-input value=peopleCount name="people-count" maxlength= "10" id="people-count" acceptZeroValue="true"  pattern=".{1,}"}}
                 </div>
               </div>
               <div class="row district-select">
