no search result message added

--- a/app/templates/search_organisation.hbs
+++ b/app/templates/search_organisation.hbs
@@ -47,6 +47,8 @@
                   </div>
                 </div>
               </li>
+            {{else}}
+              <div class='no_result'>{{t "no_search_results"}}</div>
             {{/each}}
           </ul>
         {{/infinite-list}}
