:recycle: Add validation for missing goods type

--- a/app/templates/components/add-request.hbs
+++ b/app/templates/components/add-request.hbs
@@ -21,7 +21,7 @@
       <div class="row">
         <div class="small-12 columns request_empty_error">
           <div class='error'>{{fa-icon "exclamation-triangle"}}
-            <span class="error-reason-margin">{{t "add_request.error"}}</span>
+            <span class="error-reason-margin">{{t "order.goods_details.validation_error.invalid_details"}}</span>
           </div>
         </div>
       </div>
