GCW-3352 Possible to edit request purpose on browse after closing it on stock

--- a/app/templates/request_purpose.hbs
+++ b/app/templates/request_purpose.hbs
@@ -121,6 +121,11 @@
           </div>
         </div>
       </div>
+      {{#if order}}
+        {{#message-box btn1Text=(t "ok") btn1Callback=(action "back") isVisible=(if order.isEditAllowed false) classNames="popupOverlay"}}
+          <p class="bold"> {{t 'access_denied'}}</p>
+        {{/message-box}}
+      {{/if}}
     </div>
   </div>
 </div>
