--- a/app/templates/order/goods_details.hbs
+++ b/app/templates/order/goods_details.hbs
@@ -37,8 +37,8 @@
         <section
           class="main-section client-information request-add-remove-section medium-10 medium-offset-1 large-10 large-offset-1 columns">
           {{#validatable-form onSubmit=(action 'saveGoodsDetails') as |form|}}
-          {{#each sortedGcRequests as |req index|}}
-          {{add-request id=index order=model request=req num=index}}
+          {{#each goodcityRequests as |req index|}}
+          {{add-request id=index order=model request=req num=index onRemoveRequest=(action 'removeRequest')}}
           {{/each}}
           <div class='row req-more-goods'>
             <div class='columns request-more link-blue add_package_link add_more_request'
