:fire: Add overlay for package type selection

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -29,6 +29,7 @@
 @import "static_pages";
 @import "about";
 @import "mentions";
+@import "components/_popup-overlay.scss";
 
 @import "templates/home";
 @import "templates/loading";
