--- a/app/templates/components/add-request.hbs
+++ b/app/templates/components/add-request.hbs
@@ -17,7 +17,7 @@
       </div>
     </div>
     {{!-- <div class="small-12 columns"> --}}
-    {{#if (is-not requestType)}}
+    {{#if hasError}}
       <div class="row">
         <div class="small-12 columns request_empty_error">
           <div class='error'>{{fa-icon "exclamation-triangle"}}
