GCW-3446 Adding Chinese Description for packages in browse app

--- a/app/templates/components/cloudinary-image-tag.hbs
+++ b/app/templates/components/cloudinary-image-tag.hbs
@@ -11,7 +11,7 @@
           </span>
           :
           <span class="item-notes">
-            {{item.notes}}
+            {{item.packageDescription}}
           </span>
         </li>
       </div>
