added routes for messages

--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -33,6 +33,7 @@
       <div class="row button_container">
 
         <!-- Browse goods -->
+        {{#link-to "offers.index"}}Offers{{/link-to}}
         <div class="columns home_section large-6">
           {{#if onlineOrderWarning}}
             <div class="row">
