--- a/app/templates/offers/_offers_tabs.hbs
+++ b/app/templates/offers/_offers_tabs.hbs
@@ -3,7 +3,7 @@
     <i class="fa dashboard-menu item-menu">{{fa-icon 'list'}}</i>
   {{/link-to}}
 
-  {{#link-to 'offers.messages' model.id  tagName="div" classNames="small-6 account tab columns text-center"}}
+  {{#link-to 'offers.messages' model.id  (query-params uid=model.public_uid) tagName="div" classNames="small-6 account tab columns text-center"}}
     <i class="fa dashboard-menu item-menu">{{fa-icon 'comments' }}</i>
   {{/link-to}}
 </div>
@@ -12,7 +12,7 @@
     Offer Details
   {{/link-to}}
 
-  {{#link-to 'offers.messages' model.id tagName="div" classNames="small-6 account active-tab tab columns text-center item-menu"}}
+  {{#link-to 'offers.messages' model.id (query-params uid=model.public_uid) tagName="div" classNames="small-6 account active-tab tab columns text-center item-menu"}}
     Your Response
   {{/link-to}}
 </div>
