moved offer-item logic to component

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -40,6 +40,7 @@
 @import "templates/login";
 @import "templates/client_information";
 @import "templates/schedule_details";
+@import "templates/_offers";
 @import "components/logo-banner";
 @import "components/quantity-widget";
 @import "components/add-request";
